<resources>
    <string name="app_name">Noodle</string>
    <string name="enter_record">Digite seu Prontuário</string>
    <string name="enter_password">Digite sua Senha</string>
    <string name="login">Entrar</string>
    <string name="if_not_signin">Se não possui uma conta faça seu cadastro aqui</string>
    <string name="full_name">Nome Completo</string>
    <string name="email">E-Mail</string>
    <string name="password">Senha</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="signin">Cadastrar</string>
    <string name="works">Tarefas</string>
    <string name="courses">Cursos</string>
    <string name="settings">Configurações</string>
    <string name="error_sign">Ocorreu um erro ao cadastrar o seu usuário</string>
    <string name="error_log">Ocorreu um erro ao entrar com o seu usuário</string>
    <string name="wrong_pass">A senha está incorreta</string>
    <string name="try_again">Tente novamente</string>
    <string name="birth_input">A data de nascimento não foi corretamente preenchida</string>
    <string name="fields_input">Um dos campos não foi preenchido corretamente</string>
    <string name="error_create_work">Erro ao criar a tarefa</string>
    <string name="error_create_lesson">Erro ao criar a aula</string>
    <string name="create_work">Criar Tarefa</string>
    <string name="back">Voltar</string>
    <string name="work_name">Nome da tarefa</string>
    <string name="lesson_name">Nome da aula</string>
    <string name="work_description">Descrição da tarefa</string>
    <string name="lesson_description">Descrição da aula</string>
    <string name="deadline">Prazo de entrega</string>
    <string name="create">Criar</string>
    <string name="create_lesson">Criar aula</string>
    <string name="error_create_course">Ocorreu um erro ao tentar salvar o curso</string>
    <string name="add_user">Adicionar Participante</string>
    <string name="error_add_user">Erro ao adicionar o usuário</string>
    <string name="course_name">Nome do Curso</string>
    <string name="course_description">Descrição do curso</string>
    <string name="create_course">Criar curso</string>
    <string name="add_users">Adicionar Participantes</string>
    <string name="active_works">Tarefas ativas</string>
    <string name="verify_your_email">Verifique seu email</string>
    <string name="enter_code">Digite o código</string>
    <string name="verify">Verificar</string>
    <string name="verification_explanation">Caso seu email não seja verificado não será possível criar novos cursos</string>
    <string name="continue_">Continuar</string>
    <string name="user_record">Prontuário</string>
    <string name="record_copyied">Prontuário Copiado</string>
    <string name="send_file">Enviar Arquivo</string>
</resources>