<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow1"
    android:padding="20dp"
    tools:context=".ui.view.SignInActivity">



    <LinearLayout
        android:id="@+id/lyTittle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/noodle_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/appName"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/logoImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/logoImage"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:padding="12dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@+id/lyTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="date"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@id/lyTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="12dp"
        android:layout_marginTop="7dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/etBirthDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="12dp"
        android:layout_marginTop="7dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:backgroundTint="@color/yellow2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
