<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow1"
    android:padding="20dp"
    tools:context=".ui.view.MainActivity">

    <LinearLayout
        android:id="@+id/lyTittle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/noodle_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/appName"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/logoImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/logoImage"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etSchoolRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_record"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/lyTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etSchoolRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/yellow2"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_not_signin"
        android:textColor="@color/link"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
