<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow1"
    tools:context=".ui.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courseLessonListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/btnAddLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_lesson"
            android:layout_margin="10dp"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCourseLesson"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddLesson" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courseLessonAddLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvTittleAddLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="24dp"
            android:text="@string/create_lesson"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnBackFromLessonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_margin="10dp"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/etLessonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="25dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/lesson_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackFromLessonAdd"/>

        <EditText
            android:id="@+id/etLessonDescription"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/lesson_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLessonName"/>

        <Button
            android:id="@+id/btnLessonSendFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/send_file"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/etLessonDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnCreateWork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/create"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnLessonSendFile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>