<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow1"
    tools:context=".ui.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courseUserListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/btnAddUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:layout_margin="10dp"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCourseUsers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddUsers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courseUserAddLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTittleAddUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="24dp"
            android:text="@string/add_users"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnAddCourseUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/add_users"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvTittleAddUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCourseUsersDB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddCourseUser" />

        <Button
            android:id="@+id/btnBackFromUserAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_margin="10dp"
            android:backgroundTint="@color/yellow2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>